--- a/K2Build/Jenkinsfile
+++ b/K2Build/Jenkinsfile
@@ -24,5 +24,13 @@ pipeline {
                 sh "make -C K2Build builder_img_push"
             }
         }
+        stage('Build') {
+            options { skipDefaultCheckout() }
+            agent {label "builder"}
+            steps {
+                echo "\u2600 Building"
+                sh "./K2Build/k2build make -C K2Build"
+            }
+        }
     }
 }
