add cmake flags, add install target,  organize code

--- a/K2Build/Makefile
+++ b/K2Build/Makefile
@@ -1,18 +1,23 @@
 include DFV_K2_BuildDeps/DockerMake.base
-
+BUILD_DIR=../build
+INSTALL_PFX=${BUILD_DIR}/install/usr/local/
 package_version=$(shell git describe --tags `git rev-list --tags --max-count=1`)
 
 all: build
-# replace with module
-BUILD_DIR=build
+
 build:
 	@echo ">>> Building"
-	@cd ../ && mkdir -p ${BUILD_DIR} && cd ${BUILD_DIR} && cmake ..
-	@cd ../${BUILD_DIR}/ && $(MAKE)
+	@mkdir -p ${BUILD_DIR}
+	@cmake -B$(BUILD_DIR) -H../ -DCMAKE_INSTALL_PREFIX=${INSTALL_PFX}
+	@$(MAKE) -C${BUILD_DIR}
+
+install: build
+	@echo ">>> Installing"
+	@$(MAKE) -C${BUILD_DIR} install
 
 clean:
 	@echo ">>> Cleaning"
-	@cd ../ && rm -rf $(BUILD_DIR)
+	@rm -rf $(BUILD_DIR)
 
 builder_img_build:
 	@$(MAKE) -C Builder
