--- a/K2Build/Jenkinsfile
+++ b/K2Build/Jenkinsfile
@@ -32,5 +32,22 @@ pipeline {
                 sh "./K2Build/k2build make -C K2Build"
             }
         }
+        stage('Package') {
+            options { skipDefaultCheckout() }
+            agent {label "builder"}
+            steps {
+                echo "\u2600 Package"
+                sh "./K2Build/k2build make -C K2Build package"
+            }
+        }
+        stage('Upload artifacts') {
+            options { skipDefaultCheckout() }
+            agent {label "builder"}
+            steps {
+                echo "\u2600 Uploading artifacts"
+                sh "curl http://k2-bvu-10001.huawei.com:10080/incoming/ --upload-file k2platform_*.deb"
+                sh "curl http://k2-bvu-10001.huawei.com:10080/incoming/ --upload-file k2platform_*.changes"
+            }
+        }
     }
 }
