Ping benchmark partially working with dpdk

--- a/K2Build/Builder/Dockerfile
+++ b/K2Build/Builder/Dockerfile
@@ -1,4 +1,4 @@
 ARG DOCKER_REGISTRY
 FROM ${DOCKER_REGISTRY}/k2builder:latest
 ARG USE_PROXY
-RUN proxy apt update && proxy apt install -y libseastar-k2
+RUN proxy apt update && proxy apt install -y libseastar-k2=1.0.1
