Fix cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set (DPDK_LINK_FLAGS "-Wl,--no-as-needed ${DPDK_SHLIBS} -Wl,--as-needed")
 set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${DPDK_LINK_FLAGS}")
 
 include_directories(src)
+include_directories(src/include)
 
 find_package (Seastar REQUIRED)
 
