--- a/src/cmd/benchmark/CMakeLists.txt
+++ b/src/cmd/benchmark/CMakeLists.txt
@@ -3,3 +3,4 @@ add_executable (bench_server bench_server.cpp)
 
 target_link_libraries (bench_client PRIVATE Seastar::seastar)
 target_link_libraries (bench_server PRIVATE Seastar::seastar)
+install (TARGETS bench_client bench_server DESTINATION bin)
