--- a/src/cmd/master/CMakeLists.txt
+++ b/src/cmd/master/CMakeLists.txt
@@ -3,3 +3,4 @@ link_directories (${CMAKE_BINARY_DIR}/src/common/scheduler/)
 add_executable (master main.cpp)
 
 target_link_libraries (master PRIVATE scheduler Seastar::seastar)
+install (TARGETS master DESTINATION bin)
