--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,1 +1,14 @@
 add_subdirectory(scheduler)
+
+project (common VERSION 1.0.0 DESCRIPTION "common library for k2 platform")
+
+add_library (common STATIC 
+	Status.cpp
+)
+
+set_target_properties (common PROPERTIES
+	VERSION ${PROJECT_VERSION}
+	SOVERSION 1
+)
+
+install (TARGETS common DESTINATION lib)
