--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,7 @@
+#<!--
+#    (C)opyright Futurewei Technologies Inc, 2019
+#-->
+
 add_subdirectory (common)
 add_subdirectory (cmd)
-add_subdirectory (node)
+add_subdirectory (transport)
