--- a/src/cmd/CMakeLists.txt
+++ b/src/cmd/CMakeLists.txt
@@ -1,2 +1,7 @@
+#<!--
+#    (C)opyright Futurewei Technologies Inc, 2019
+#-->
+
 add_subdirectory(master)
 add_subdirectory(benchmark)
+add_subdirectory(demo)
