update test with Catch2 C++ Test Framework

--- a/test/node/CMakeLists.txt
+++ b/test/node/CMakeLists.txt
@@ -1,6 +1,9 @@
+
+
 link_directories (${CMAKE_BINARY_DIR}/src/common/)
 
-add_executable (node_test AssignmentManagerTest.cpp Main.cpp)
+add_executable (node_test Main.cpp AssignmentManagerTest.cpp)
 
 target_link_libraries (node_test PRIVATE common Seastar::seastar)
+
 install (TARGETS node_test DESTINATION bin)
