Fix the build and make the test pass

--- a/test/node/CMakeLists.txt
+++ b/test/node/CMakeLists.txt
@@ -3,6 +3,7 @@
 link_directories (${CMAKE_BINARY_DIR}/src/common/)
 
 add_executable (node_test Main.cpp AssignmentManagerTest.cpp)
+SET(CMAKE_CXX_FLAGS "-std=c++14 -march=native -mavx -mavx2 -mbmi2 -mlzcnt -Wno-deprecated-declarations -Wall -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -faligned-new")
 
 target_link_libraries (node_test PRIVATE common Seastar::seastar)
 
