--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,5 +4,6 @@
 
 add_subdirectory (common)
 add_subdirectory (client)
+add_subdirectory (node)
 add_subdirectory (cmd)
 add_subdirectory (transport)
