--- a/K2Build/Jenkinsfile
+++ b/K2Build/Jenkinsfile
@@ -38,6 +38,9 @@ pipeline {
             steps {
                 echo "\u2600 Run K2 Platform Integration Test"
                 sh "./K2Build/k2build make -j -C K2Build test"
+                sh "./K2Build/k2build /build/build/src/node/node_pool"
+                sh "./K2Build/k2build ./test/node_test"
+                sh "docker kill $(docker ps -q)"
             }
         }
         stage('Install') {
