[KP-93] K2 YAML configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories(src/include)
 include_directories(test/include)
 
 find_package (Seastar REQUIRED)
+find_package (yaml-cpp REQUIRED) # required for configuration file parsing
 
 add_subdirectory (src)
 add_subdirectory (test)
