--- a/src/node/CMakeLists.txt
+++ b/src/node/CMakeLists.txt
@@ -8,3 +8,4 @@ include_directories(..)
 
 target_link_libraries (node_pool PRIVATE common Seastar::seastar)
 install (TARGETS node_pool DESTINATION bin)
+install(FILES module/MemKVModule.h DESTINATION include/node/module)
