Update to generate the rpm package for K2_Index project to use

--- a/K2Build/Jenkinsfile
+++ b/K2Build/Jenkinsfile
@@ -65,6 +65,7 @@ pipeline {
             steps {
                 echo "\u2600 Uploading artifacts"
                 sh "curl http://k2-bvu-10001.huawei.com:10080/incoming/ --upload-file k2platform_*.deb"
+                sh "curl http://k2-bvu-10001.huawei.com:10080/incoming/ --upload-file k2platform_*.rpm"
                 sh "curl http://k2-bvu-10001.huawei.com:10080/incoming/ --upload-file k2platform_*.changes"
             }
         }
