--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,10 +1,2 @@
-cmake_minimum_required(VERSION 3.12)
-
-find_package (Seastar REQUIRED)
-
-add_executable (client Main.cpp)
-
-include_directories(..)
-
-target_link_libraries (client PRIVATE common Seastar::seastar)
-install (TARGETS client DESTINATION bin)
+add_subdirectory(lib)
+add_subdirectory(main)
