rename the libraries to have k2 prefix

--- a/src/client/lib/CMakeLists.txt
+++ b/src/client/lib/CMakeLists.txt
@@ -1,15 +1,15 @@
-project(_client VERSION 1.0.0 DESCRIPTION "client library for k2 platform")
+project(k2client VERSION 1.0.0 DESCRIPTION "client library for k2 platform")
 
 include_directories(..)
 
-add_library (_client STATIC Client.cpp)
+add_library (k2client STATIC Client.cpp)
 
-set_target_properties(_client PROPERTIES 
+set_target_properties(k2client PROPERTIES 
     VERSION ${PROJECT_VERSION}
 	SOVERSION 1
 )
 
-target_link_libraries (_client PRIVATE common)
+target_link_libraries (k2client PRIVATE k2common)
 
-install(TARGETS _client DESTINATION lib)
+install(TARGETS k2client DESTINATION lib)
 install(FILES Client.h DESTINATION include/client)
