--- a/src/common/scheduler/CMakeLists.txt
+++ b/src/common/scheduler/CMakeLists.txt
@@ -1,12 +1,12 @@
-project(scheduler VERSION 1.0.0 DESCRIPTION "scheduler library")
+project(k2scheduler VERSION 1.0.0 DESCRIPTION "scheduler library for k2 platform")
 
-add_library(scheduler STATIC
+add_library(k2scheduler STATIC
     TcpService.cpp
 )
 
-set_target_properties(scheduler PROPERTIES 
+set_target_properties(k2scheduler PROPERTIES 
 	VERSION ${PROJECT_VERSION}
 	SOVERSION 1
 )
 
-install(TARGETS scheduler DESTINATION lib)
+install(TARGETS k2scheduler DESTINATION lib)
