--- a/src/cmd/master/CMakeLists.txt
+++ b/src/cmd/master/CMakeLists.txt
@@ -2,5 +2,5 @@ link_directories (${CMAKE_BINARY_DIR}/src/common/scheduler/)
 
 add_executable (master main.cpp)
 
-target_link_libraries (master PRIVATE scheduler Seastar::seastar)
+target_link_libraries (master PRIVATE k2scheduler Seastar::seastar)
 install (TARGETS master DESTINATION bin)
