Change to not use host network for the client and server container

--- a/K2Build/Jenkinsfile
+++ b/K2Build/Jenkinsfile
@@ -29,6 +29,7 @@ pipeline {
             agent {label "builder"}
             steps {
                 echo "\u2600 Build"
+                sh "docker network create --subnet=192.168.7.0/16 k2 || true"
                 sh "./K2Build/k2build make -j -C K2Build"
             }
         }
