--- a/src/node/CMakeLists.txt
+++ b/src/node/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 
+file(GLOB HEADERS "*.h")
+
 find_package (Seastar REQUIRED)
 
 add_executable (node_pool Main.cpp)
@@ -9,3 +11,5 @@ include_directories(..)
 target_link_libraries (node_pool PRIVATE k2common Seastar::seastar)
 install (TARGETS node_pool DESTINATION bin)
 install(FILES module/MemKVModule.h DESTINATION include/node/module)
+install(FILES seastar/SeastarPlatform.h DESTINATION include/node/seastar)
+install(FILES ${HEADERS} DESTINATION include/${INSTALL_SUBFOLDER}/node)
