Fix node install folder path

--- a/src/node/CMakeLists.txt
+++ b/src/node/CMakeLists.txt
@@ -12,4 +12,4 @@ target_link_libraries (node_pool PRIVATE k2common Seastar::seastar)
 install (TARGETS node_pool DESTINATION bin)
 install(FILES module/MemKVModule.h DESTINATION include/node/module)
 install(FILES seastar/SeastarPlatform.h DESTINATION include/node/seastar)
-install(FILES ${HEADERS} DESTINATION include/${INSTALL_SUBFOLDER}/node)
+install(FILES ${HEADERS} DESTINATION include/node)
