Correct persistence headers install folder

--- a/src/node/CMakeLists.txt
+++ b/src/node/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 
 file(GLOB HEADERS "*.h")
-file(GLOB PERSISTANCE_HEADERS "persistance/*.h")
+file(GLOB PERSISTANCE_HEADERS "persistence/*.h")
 file(GLOB INDEXER_HEADERS "indexer/*.h")
 
 find_package (Seastar REQUIRED)
@@ -16,5 +16,5 @@ install (TARGETS node_pool DESTINATION bin)
 install(FILES module/MemKVModule.h DESTINATION include/node/module)
 install(FILES seastar/SeastarPlatform.h DESTINATION include/node/seastar)
 install(FILES ${HEADERS} DESTINATION include/node)
-install(FILES ${PERSISTANCE_HEADERS} DESTINATION include/node/persistance)
+install(FILES ${PERSISTANCE_HEADERS} DESTINATION include/node/persistence)
 install(FILES ${INDEXER_HEADERS} DESTINATION include/node/indexer)
