KP-139 - K2 Benchmarker module make files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory (client)
 add_subdirectory (node)
 add_subdirectory (cmd)
 add_subdirectory (transport)
+add_subdirectory (benchmarker)
