--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,16 +1,15 @@
 add_subdirectory(scheduler)
 project (k2common VERSION 1.0.0 DESCRIPTION "common library for k2 platform")
 
-add_library (k2common STATIC
-	Status.cpp
-)
+file(GLOB HEADERS "*.h")
+file(GLOB SOURCES "*.cpp")
 
-set_target_properties (k2common PROPERTIES
+add_library(k2common STATIC ${HEADERS} ${SOURCES})
+
+set_target_properties(k2common PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION 1
 )
 
-file(GLOB HEADERS "*.h")
-
-install (TARGETS k2common DESTINATION lib)
+install(TARGETS k2common DESTINATION lib)
 install(FILES ${HEADERS} DESTINATION include/common)
