KP-114-K2TXPlatform-based-nodepool (#31)
* KP-114-K2TXPlatform-based-nodepool
* reorganized code to make it build for IndexLayer
* Renamed k2tx namespace to k2 per Valentin's request
* Moved all possibly common code between IndexLayer and K2 to header-only as per Valentin
* Removed k2tx base types in favor of types from common as per Valentin
* Removed most seastar dependencies from node/
* add transport cmake dependency
* Updated Log.h implementation to be more resilient to mixed-in variable names

--- a/K2Build/Jenkinsfile
+++ b/K2Build/Jenkinsfile
@@ -38,10 +38,7 @@ pipeline {
             steps {
                 echo "\u2600 Run K2 Platform Integration Test"
                 sh "./K2Build/k2build make -j -C K2Build test"
-                sh "docker network create --subnet=192.168.7.0/16 k2 || true"
-                sh "./K2Build/k2integrate /build/build/src/node/node_pool"
-                sh "./K2Build/k2integrate ./test/node_test"
-                sh "cat /tmp/node_pool_container_id | xargs docker kill && rm /tmp/node_pool_container_id"
+                sh "./K2Build/k2build make -j -C K2Build integrate"
             }
         }
         stage('Install') {
