--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_subdirectory(lib)
-add_subdirectory(controlPlaneClient)
+project(k2client VERSION 1.0.0 DESCRIPTION "client library for k2 platform")
+
+add_subdirectory (boost)
 add_subdirectory(dataPlaneClient)
+add_subdirectory(controlPlaneClient)
