--- a/src/client/controlPlaneClient/CMakeLists.txt
+++ b/src/client/controlPlaneClient/CMakeLists.txt
@@ -1,12 +1,8 @@
 cmake_minimum_required(VERSION 3.12)
 
 find_package (Boost REQUIRED)
-
 add_definitions(-DPARTITION_MANAGER_USE_OBS_INDEX)
-
 add_executable (controlPlaneClient Main.cpp)
 
-include_directories(..)
-
-target_link_libraries (controlPlaneClient PRIVATE k2common k2client boost_system boost_program_options boost_filesystem)
+target_link_libraries (controlPlaneClient PRIVATE k2common k2boostclient boost_system boost_program_options boost_filesystem)
 install (TARGETS controlPlaneClient DESTINATION bin)
