--- a/src/node/CMakeLists.txt
+++ b/src/node/CMakeLists.txt
@@ -1,20 +1,15 @@
 cmake_minimum_required(VERSION 3.12)
 
 file(GLOB HEADERS "*.h")
+file(GLOB SOURCES "*.cpp")
 file(GLOB PERSISTANCE_HEADERS "persistence/*.h")
 file(GLOB INDEXER_HEADERS "indexer/*.h")
 
-find_package (Seastar REQUIRED)
+add_library(k2node STATIC ${HEADERS} ${SOURCES})
+target_link_libraries (k2node PRIVATE k2common)
+add_subdirectory(main)
 
-add_executable (node_pool Main.cpp)
-
-include_directories(..)
-
-target_link_libraries (node_pool PRIVATE k2common Seastar::seastar)
-
-install (TARGETS node_pool DESTINATION bin)
 install(FILES module/MemKVModule.h DESTINATION include/node/module)
-install(FILES seastar/SeastarPlatform.h DESTINATION include/node/seastar)
 install(FILES ${HEADERS} DESTINATION include/node)
 install(FILES ${PERSISTANCE_HEADERS} DESTINATION include/node/persistence)
 install(FILES ${INDEXER_HEADERS} DESTINATION include/node/indexer)
