--- a/K2Build/Makefile
+++ b/K2Build/Makefile
@@ -14,7 +14,11 @@ build:
 
 test: build
 	@echo ">>> Testing"
-	@/build/build/test/node/node_test && testReturnCode=$? && exit $(testReturnCode)
+	@../$(BUILD_DIR)/test/node/node_test && testReturnCode=$? && exit $(testReturnCode)
+
+integrate: build
+	@echo ">>> Running integration test"
+	@../integration/run.sh && testReturnCode=$? && exit $(testReturnCode)
 
 install: build
 	@echo ">>> Installing"
