--- a/test/node/Makefile
+++ b/test/node/Makefile
@@ -1,12 +1,12 @@
 RM = rm -f
 CC = g++
-CFLAGS = $(shell pkg-config --cflags seastar) -g3
+CFLAGS = $(shell pkg-config --cflags seastar) -g
 CXXFLAG = $(CFLAGS) -std=c++17 -march=broadwell -mavx -mavx2 -mbmi2 -mlzcnt -Wno-deprecated-declarations -Wall -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -faligned-new -fstack-protector-all -Wno-sign-compare -Wno-class-memaccess 
 LDFLAGS = $(shell pkg-config --libs --static seastar) 
 
 SOURCES = ../../src/common/Status.cpp Main.cpp  AssignmentManagerTest.cpp
 
-INC = -I../../src -I../include -I$(HOME)/projects/DFV_K2_HOT/libs/hot/commons/include/ -I$(HOME)/projects/DFV_K2_HOT/libs/idx/content-helpers/include/ -I$(HOME)/projects/DFV_K2_HOT/libs/hot/single-threaded/include/
+INC = -I../../src -I../include -I../../../DFV_K2_HOT/libs/hot/commons/include/ -I../../../DFV_K2_HOT/libs/idx/content-helpers/include/ -I../../../DFV_K2_HOT/libs/hot/single-threaded/include/
 
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=node_test
