KP-143: Updated the executor to use the transport module (#36)

--- a/src/cmd/demo/CMakeLists.txt
+++ b/src/cmd/demo/CMakeLists.txt
@@ -4,6 +4,8 @@
 
 add_executable (service service.cpp)
 add_executable (tcptest tcptest.cpp)
+add_executable (executor executor.cpp)
 
 target_link_libraries (service PRIVATE k2transport k2common Seastar::seastar )
 target_link_libraries (tcptest PRIVATE k2transport k2common Seastar::seastar )
+target_link_libraries (executor PRIVATE k2transport k2common Seastar::seastar)
