RRDMA support in k2tx (#39)
Fix handling of new connections to immediately register message handler
Transport benchmark
fix tcp usage to chain futures returned by calls to write/flush
Use latest seastar 1.0.6

--- a/src/cmd/demo/CMakeLists.txt
+++ b/src/cmd/demo/CMakeLists.txt
@@ -3,9 +3,15 @@
 #-->
 
 add_executable (service service.cpp)
+add_executable (txbench_client txbench_client.cpp txbench_common.h)
+add_executable (txbench_server txbench_server.cpp txbench_common.h)
 add_executable (tcptest tcptest.cpp)
 add_executable (executor executor.cpp)
 
 target_link_libraries (service PRIVATE k2transport k2common Seastar::seastar )
+target_link_libraries (txbench_client PRIVATE k2transport k2common Seastar::seastar )
+target_link_libraries (txbench_server PRIVATE k2transport k2common Seastar::seastar )
 target_link_libraries (tcptest PRIVATE k2transport k2common Seastar::seastar )
 target_link_libraries (executor PRIVATE k2transport k2common Seastar::seastar)
+
+install (TARGETS txbench_client txbench_server DESTINATION bin)
