--- a/K2Build/Jenkinsfile
+++ b/K2Build/Jenkinsfile
@@ -54,7 +54,8 @@ pipeline {
             agent {label "builder"}
             steps {
                 echo "\u2600 Package"
-                sh "./K2Build/k2build make -C K2Build package"
+                sh "./K2Build/k2build make -C K2Build package_deb"
+                sh "./K2Build/k2build make -C K2Build package_rpm"
             }
         }
         stage('Upload artifacts') {
@@ -62,10 +63,8 @@ pipeline {
             agent {label "builder"}
             steps {
                 echo "\u2600 Uploading artifacts"
-                sh "curl http://k2-bvu-10001.huawei.com:10080/incoming/ --upload-file k2platform_*.deb"
-                sh "curl http://k2-bvu-10001.huawei.com:10080/incoming/ --upload-file k2platform_*.changes"
-                sh "curl http://k2-bvu-10001.huawei.com:10070/ --upload-file k2platform-*.rpm"
-                sh "curl http://k2-bvu-10001.huawei.com:10070/commit"
+                sh "./K2Build/k2build make -C K2Build package_push_deb"
+                sh "./K2Build/k2build make -C K2Build package_push_rpm"
             }
         }
     }
