--- a/src/cmd/k2b/CMakeLists.txt
+++ b/src/cmd/k2b/CMakeLists.txt
@@ -2,8 +2,6 @@
 #    (C)opyright Futurewei Technologies Inc, 2019
 #-->
 
-add_executable (k2b-service Service.cpp)
-add_executable (k2b-client Client.cpp)
+add_executable (k2b-service service/Service.cpp)
 
-target_link_libraries (k2b-service PRIVATE k2benchmarker k2transport Seastar::seastar)
-target_link_libraries (k2b-client PRIVATE k2benchmarker k2transport Seastar::seastar)
+target_link_libraries (k2b-service PRIVATE k2benchmarker k2client)
