--- a/src/cmd/k2b/CMakeLists.txt
+++ b/src/cmd/k2b/CMakeLists.txt
@@ -4,4 +4,4 @@
 
 add_executable (k2b-service service/Service.cpp)
 
-target_link_libraries (k2b-service PRIVATE k2benchmarker k2client)
+target_link_libraries (k2b-service PRIVATE k2benchmarker k2client boost_system boost_program_options boost_filesystem)
