Added nodepool metrics collection

--- a/src/client/dataPlaneClient/CMakeLists.txt
+++ b/src/client/dataPlaneClient/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required(VERSION 3.12)
 add_executable (dataPlaneClient Main.cpp)
 add_definitions(-DPARTITION_MANAGER_USE_OBS_INDEX)
 
-target_link_libraries (dataPlaneClient PRIVATE k2common k2node boost_system boost_program_options boost_filesystem)
+target_link_libraries (dataPlaneClient PRIVATE k2common k2node boost_system boost_program_options boost_filesystem Seastar::seastar)
 install (TARGETS dataPlaneClient DESTINATION bin)
