--- a/config/node.config.yaml
+++ b/config/node.config.yaml
@@ -1,13 +1,12 @@
 ---
-nodes:
-  - name: "1" 
-    endpoint:
-      type: IPv4
-      ip: 127.0.0.1
-      port: 11311
-  - name: "2"
-    endpoint:
-      type: IPv4
-      ip: 127.0.0.1
-      port: 12345
-...
+name: "np1"
+nodes_count: 1
+#nodes_cpu_set: "30"
+#pool_cpu_set: "18,19"
+#address: "10.218.233.149"
+nodes_minimum_port: 11311
+monitorEnabled: false
+#rdmaEnabled: true
+#hugepages: true
+#memory: "10G"
+#nic_id: "mlx5_0"
