--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@
 #-->
 
 add_subdirectory (common)
+add_subdirectory (config)
 add_subdirectory (client)
 add_subdirectory (node)
 add_subdirectory (cmd)
