--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required (VERSION 3.12)
 add_subdirectory (node)
 add_subdirectory (client)
 add_subdirectory (plogmock)
+add_subdirectory (persistentVolume)
