k2-config: backwards compatible configuration

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@
 add_subdirectory (common)
 add_subdirectory (client)
 add_subdirectory (node)
+add_subdirectory (config)
 add_subdirectory (cmd)
 add_subdirectory (transport)
 add_subdirectory (benchmarker)
