--- a/config/node.config.yaml
+++ b/config/node.config.yaml
@@ -3,8 +3,8 @@ name: "np1"
 nodes_count: 1
 #nodes_cpu_set: "30"
 #pool_cpu_set: "18,19"
-#address: "10.218.233.149"
-nodes_minimum_port: 11311
+address: "0.0.0.0"
+nodes_minimum_port: 11312
 monitorEnabled: false
 #rdmaEnabled: true
 #hugepages: true
